# ish

./: .gitignore  debug.h  meson.build  meson_options.txt  misc.h  xcode-meson.sh
app/: AboutAppearanceViewController.m  AppGroup.m  TerminalView.m  Theme.m  ThemeViewController.m  ThemesViewController.m  UserPreferences.m  iSH.entitlements  iSH.xcconfig
app/Icons/: Icons.plist
app/terminal/: term.js
emu/: decode.h  float80.c  fpu.c  memory.c  mmx.c  modrm.h  tlb.c  tlb.h  vec.c  vec.h
fs/: fake-db.c  fd.c  sock.c  sock.h
iSH.xcodeproj/: project.pbxproj
iSH.xcodeproj/xcshareddata/xcschemes/: iSH.xcscheme
jit/: gen.c  jit.c
jit/gadgets-aarch64/: bits.S  math.S  misc.S
kernel/: calls.c  calls.h  fs.c  fs.h
linux/: fakefs.c
local/: cov.sh  launch.sh  obj_dump.sh  rebuild.sh  setup_alpine.sh
tests/e2e/qemu/: expected.txt  qemu-test.c
tools/: meson.build
util/: atomic.h  spinlock.h
