option('log', type: 'string', value: '')
option('nolog', type: 'string', value: '')
option('log_handler', type: 'string', value: 'dprintf')

option('engine', type: 'combo', choices: ['jit', 'interp'], value: 'jit')
option('kernel', type: 'combo', choices: ['ish', 'linux'], value: 'linux')
option('kconfig', type: 'array', value: [])

option('vdso_c_args', type: 'string', value: '')

option('no_crlf', type: 'boolean', value: false)

option('coverage', type: 'boolean', value: false)
option('profile_instr', type: 'boolean', value: false)
option('use_profile_instr', type: 'boolean', value: false)
option('fsan', type: 'boolean', value: false)
option('safe_stack', type: 'boolean', value: false)